css/main.css
/* ... */
 .contact-section {
   flex-flow: row wrap;
 }

.faq {
  flex-flow: row wrap;
}

.content-wrapper {
  width: 100%;
  margin: 50px 0;
}

 .hero-area {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: row wrap;
 }

/* -------------------- Features -------------------- */

 .features {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
 }

 .features article {
  width: 63%;
  margin: 30px 0;
}

 .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }

 .features p {
   margin: 0;
   color: #e1e2ea;
 }

 .mission {
  flex-wrap: row wrap;
}

/* -------------------- Reviews -------------------- */

 .reviews {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #2a423a;
}

.reviews h3 {
  width: 65%;
}

/* -------------------- Article -------------------- */
 article {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  width: 66%;
 }


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
 * Extends the .sr-only class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix::before,
.clearfix::after {
  content: " ";
  display: table;
}

.clearfix::after {
  clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 768px) {
    /*Tablet styles here*/

    .content-wrapper {
      width: 90%;
      margin: 100px 0;
    }

 /* Header */
    header {
      justify-content: space-around;
      padding: 33px 0;
    }

    header .content-wrapper {
      width: 83%;
      justify-content: space-between;
    }

    header nav {
      width: 30%; 
    }

    header nav ul {
      justify-content: space-between;

    }

    .header-divider {
      display: none;
    }

    aside .content-wrapper {
      margin: 50px 0;
      width: 80%;
      display: flex;
      justify-content: space-between;
    }

    aside .content-wrapper .form .form-description {
      display: flex;
      width: 40%;
      margin: 0;

    }

    aside h2 {
      width: 83%;
      align-items: center;
      margin: 0;
    }

    .faq-content {
      flex-basis: 50%;
    }

    /* Features */
    .features article {
      display: flex;
      justify-content: space-around;
      align-items: center;
      flex-flow: column wrap;
      flex-basis: 50%;
    }

    .features .features-items{
      width: 83%; 
      display: flex;
      justify-content: center;
      align-items: center;
      flex-flow: row wrap;
    }

    .features .features-item-description {
      width: 50%;
    }

    .reviews article {
      display: flex;
      justify-content: flex-end;
      width: 83%;

    }

 /* Footer */

    footer .footer-content {
      display: flex;
      justify-content: center;
      align-items: column;
    }

/* ==========================================================================
   About Page
   ========================================================================== */
 
   .mission-content {
    display: flex;
    justify-content: space-between;
    align-items: left;  
}

.mission-content p {
    width: 83%;
}

.contact-section .content-wrapper h2 {
    width: 83%;
}

.contact-content {
    display: flex; 
    justify-content: space-between;
    align-items: left; 
}

/* ==========================================================================
   FAQ Page
   ========================================================================== */
   .faq .content-wrapper {
    justify-content: space-between;
}

.faq-content {
    flex-basis: 40%;
}

.faq h2 {
    width: 100%;
}


    }
/* ... */

